--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
    --bg-color:#eee;
    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
    --border:.1rem solid var(--black);
+   --red:#ff0000;
 }
 
 *{
@@ -37,6 +38,23 @@ html{
 }
 
 .btn:hover{
+   background: var(--black);
+   color:var(--white);
+}
+
+.btn_remove{
+   display: block;
+   width: 100%;
+   cursor: pointer;
+   border-radius: .5rem;
+   margin-top: 1rem;
+   font-size: 1.7rem;
+   padding:1rem 3rem;
+   background: var(--red);
+   color:var(--white);
+   text-align: center;
+}
+.btn_remove:hover{
    background: var(--black);
 }
 
